# garmonia-v2

./: .dockerignore  .env.production.example  .gitignore  README.md  docker-compose.yml  testimonials_data.sql
.github/workflows/: deploy.yaml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  testimonials_data.sql
backend/accounts/: managers.py  models.py
backend/accounts/migrations/: 0001_initial.py  0002_add_is_staff_is_active.py  0003_remove_customuser_city_remove_customuser_country_and_more.py
backend/app/: admin.py  apps.py  models.py  routers.py  serializers.py  views.py
backend/app/migrations/: 0001_initial.py  0002_testimonial_rating_alter_monthlyoffer_active_and_more.py  0003_alter_treatment_price_alter_testimonial_rating.py
backend/app/services/: email.py
backend/app/tests/: test_api_category.py  test_api_contact.py  test_api_gallery.py  test_api_monthly_offer.py  test_api_testimonial.py  test_api_treatment.py  test_send_email_service.py
backend/config/: settings.py  urls.py
backend/mailcow/scripts/: issue-cert.sh  sync-letsencrypt.sh
backend/review/: urls.py  views.py
backend/review/services/: google_reviews.py
backend/scripts/: run_backend.sh  run_backend_local.sh
backend/website/: models.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/scripts/: optimize-images.mjs
frontend/src/: App.vue  content.ts  main.ts  (+2 more)
nginx/: nginx.conf
scripts/: import-existing-certs.sh  issue-cert-main.sh
(+25 files in other folders)
